# test_auth_system

./: .gitignore  LICENSE.txt  Makefile  README.md  config.py  docker-compose.yaml  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 667e65fcc8e2_init.py  a85548e5b3f3_insert_test_data.py
src/: config.py  main.py  notifier.py  token_manager.py
src/admin/: use_case.py
src/admin/use_cases/: __init__.py  delete_user.py  manage_user_permissions.py
src/auth/: exceptions.py  models.py  permissions.py  permissions_decorator.py  repository.py  security.py
src/auth/repositories/: __init__.py  permissions_repo.py  refresh_token_repo.py  user_session_repo.py
src/auth/use_cases/: __init__.py  login.py  logout.py  refresh.py
src/core/: base_repository.py  base_types.py  security.py  utils.py
src/db/: base_models.py  database.py  models.py
src/routes/: __init__.py  admin.py  auth.py  mock.py  mock_routes.py  users.py
src/routes/shemas/: __init__.py  admin.py  auth.py  user.py
src/users/: exceptions.py  repository.py
src/users/repositories/: __init__.py  user.py  user_role.py
src/users/use_cases/: __init__.py  change_password.py  confirm_email.py  delete.py  register.py  update_profile.py
